@@ -657,12 +657,6 @@ extern Function_ptr *global;
 #define output_screen (*((Screen **)global[OUTPUT_SCREEN]))
 #define screen_list (*((Screen **)global[SCREEN_LIST]))
 #define irclog_fp (*((FILE **)global[IRCLOG_FP]))
-#define dll_functions (*((BuiltInDllFunctions **)global[DLL_FUNCTIONS]))
-#define dll_numeric (*((NumericFunction **)global[DLL_NUMERIC]))
-#define dll_commands (*((IrcCommandDll **)global[DLL_COMMANDS]))
-#define dll_variable (*((IrcVariableDll **)global[DLL_VARIABLE]))
-#define dll_ctcp (*((CtcpEntryDll **)global[DLL_CTCP]))
-#define dll_window (*((WindowDll **)global[DLL_WINDOW]))
 #define window_display ((int) *((int *)global[WINDOW_DISPLAY]))
 #define status_update_flag ((int) *((int *)global[STATUS_UPDATE_FLAG]))
 #define tabkey_array (*((NickTab **)global[TABKEY_ARRAY]))
